finished through combining the data sets into one df

--- a/Pymaceuticals/main.ipynb
+++ b/Pymaceuticals/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#set variables for data files\n",
     "mouse_metadata = os.path.join(\"Resources\", \"mouse_metadata.csv\")\n",
@@ -29,7 +40,7 @@
     "mouse_metadata.head()\n",
     "\n",
     "#combine the data sets into one\n",
-    "full_data = pd.merge(mouse_metadata, study_files, on=\"Mouse ID\")"
+    "full_data_df = pd.merge(mouse_metadata, study_files, on=\"Mouse ID\")"
    ]
   },
   {
